[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/Levels/MainMenuLevel/RootMenuView/RootMenuView.gd" type="Script" id=1]
[ext_resource path="res://fonts/Coaster Quake - Personal Use.otf" type="DynamicFontData" id=2]
[ext_resource path="res://addons/FontAwesome/fontawesome-webfont.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://addons/FontAwesome/FontAwesome.gd" type="Script" id=4]
[ext_resource path="res://src/Levels/MainMenuLevel/main_menu_theme.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=1]
size = 255
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 3 )

[node name="RootMenuView" type="Panel"]
anchor_top = -0.00113681
anchor_right = 1.0
anchor_bottom = 0.998863
margin_top = 1.22775
margin_bottom = 1.22778
theme = ExtResource( 5 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -398.0
margin_top = 114.37
margin_right = 398.0
margin_bottom = 273.37
custom_fonts/font = SubResource( 1 )
text = "Platformer Mission"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -32.0
margin_bottom = 32.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FontAwesomeLabel" type="Label" parent="ExitButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = ""
align = 1
valign = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
size = 16
icon = "times"

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = 37.6329
margin_right = 400.0
margin_bottom = 287.633
size_flags_vertical = 3
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="FontAwesomeLabel" type="Label" parent="PlayButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = ""
align = 1
valign = 1
script = ExtResource( 4 )
size = 64
icon = "play"

[node name="BuildButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = 301.707
margin_right = 400.0
margin_bottom = 439.707
size_flags_vertical = 3
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="FontAwesomeLabel" type="Label" parent="BuildButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = ""
align = 1
valign = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
size = 64
icon = "hammer"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -6.0
margin_right = 400.0
margin_bottom = 37.0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Random" type="HBoxContainer" parent="HBoxContainer"]
margin_right = 197.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FontAwesomeLabel2" type="Label" parent="HBoxContainer/Random"]
margin_right = 38.0
margin_bottom = 31.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 5 )
text = ""
align = 1
valign = 1
script = ExtResource( 4 )
size = 30
icon = "dice"

[node name="RandomCheckBox" type="CheckBox" parent="HBoxContainer/Random"]
margin_left = 50.0
margin_right = 66.0
margin_bottom = 43.0

[node name="Best" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 201.0
margin_right = 398.0
margin_bottom = 43.0
size_flags_horizontal = 3

[node name="FontAwesomeLabel" type="Label" parent="HBoxContainer/Best"]
margin_right = 30.0
margin_bottom = 31.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 6 )
text = ""
align = 1
valign = 1
script = ExtResource( 4 )
size = 30
icon = "medal"

[node name="BestCheckBox" type="CheckBox" parent="HBoxContainer/Best"]
margin_left = 34.0
margin_right = 50.0
margin_bottom = 43.0
disabled = true

[node name="Unsupported" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 402.0
margin_right = 599.0
margin_bottom = 43.0
size_flags_horizontal = 3

[node name="FontAwesomeLabel" type="Label" parent="HBoxContainer/Unsupported"]
margin_right = 23.0
margin_bottom = 31.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 7 )
text = ""
align = 1
valign = 1
script = ExtResource( 4 )
size = 30
icon = "question"

[node name="CheckBox" type="CheckBox" parent="HBoxContainer/Unsupported"]
margin_left = 27.0
margin_right = 43.0
margin_bottom = 43.0
disabled = true

[node name="Unsupported2" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 603.0
margin_right = 800.0
margin_bottom = 43.0
size_flags_horizontal = 3

[node name="FontAwesomeLabel" type="Label" parent="HBoxContainer/Unsupported2"]
margin_right = 23.0
margin_bottom = 31.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 8 )
text = ""
align = 1
valign = 1
script = ExtResource( 4 )
size = 30
icon = "question"

[node name="CheckBox" type="CheckBox" parent="HBoxContainer/Unsupported2"]
margin_left = 27.0
margin_right = 43.0
margin_bottom = 43.0
disabled = true
[connection signal="pressed" from="ExitButton" to="." method="_quit_game"]
[connection signal="pressed" from="PlayButton" to="." method="_play_button"]
[connection signal="pressed" from="BuildButton" to="." method="_build_button"]
[connection signal="pressed" from="HBoxContainer/Random/RandomCheckBox" to="." method="_on_option_selection" binds= [ 0 ]]
[connection signal="pressed" from="HBoxContainer/Best/BestCheckBox" to="." method="_on_option_selection" binds= [ 1 ]]
